chore(sources): fix typo

--- a/src/data/sources.yaml
+++ b/src/data/sources.yaml
@@ -34,7 +34,7 @@
 
 - title:
     en: "WorldPop, Syria 100m Age and Sex Structure in 2020"
-    ar: "WorldPop، البنية السكانية في سوريا حسب الحنس والعمر بدقة 100م في 2020"
+    ar: "WorldPop، البنية السكانية في سوريا حسب الجنس والعمر بدقة 100م في 2020"
   description:
     en: "Offers population estimates per grid square in Syria for 2020, categorized by age and sex, with approximately 100m resolution."
     ar: "يقدم تقديرات سكانية لكل مربع شبكي في سوريا لعام 2020، مصنفة حسب العمر والجنس، بدقة تقارب 100 متر."
