--- a/src/data/sources.yaml
+++ b/src/data/sources.yaml
@@ -255,7 +255,7 @@
     en: "A humanitarian information platform providing updates, reports, and analysis on the humanitarian situation in Syria."
     ar: "منصة معلومات إنسانية تقدم تحديثات وتقارير وتحليلات حول الوضع الإنساني في سوريا."
   url: "https://reliefweb.int/updates?list=Syrian%20Arab%20Republic%20Updates&advanced-search=%28PC226%29"
-  logo: "https://reliefweb.int/themes/custom/common_design_subtheme/img/logos/rw-logo-desktop.svg"
+  logo: "https://pbs.twimg.com/profile_images/836627267342102528/vEr264S4_400x400.jpg"
   formats:
     - id: "reports"
       en: "Reports"
