--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "syria-data-guide",
   "version": "0.1.0",
   "private": true,
+  
   "scripts": {
     "dev": "next dev",
+    "prebuild": "tsx scripts/generateSourcesData.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,12 +18,15 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "google-auth-library": "^9.15.0",
+    "google-spreadsheet": "^4.1.4",
     "lucide-react": "^0.462.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@types/node": "^20",
