--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,10 +30,10 @@ jobs:
           static_site_generator: next
 
       - name: Prebuild (Generate data sources in JSON)
-        run: npx next prebuild
+        run: npm run prebuild
 
       - name: Build with Next.js 🏗️
-        run: npx next build
+        run: npm run build
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
