fix(form): move submission logic to vercel serverless functions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,9 +24,9 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo NEXT_PUBLIC_GOOGLE_PRIVATE_KEY="${{ secrets.GOOGLE_PRIVATE_KEY }}" >> .env
-          echo NEXT_PUBLIC_GOOGLE_SERVICE_ACCOUNT_EMAIL="${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL }}" >> .env
-          echo NEXT_PUBLIC_GOOGLE_SHEET_ID="${{ secrets.GOOGLE_SHEET_ID }}" >> .env
+          echo GOOGLE_PRIVATE_KEY="${{ secrets.GOOGLE_PRIVATE_KEY }}" >> .env
+          echo GOOGLE_SERVICE_ACCOUNT_EMAIL="${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL }}" >> .env
+          echo GOOGLE_SHEET_ID="${{ secrets.GOOGLE_SHEET_ID }}" >> .env
 
       - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
         uses: ./.github/workflows/setup-node
